GDC-blueprint-artifacts/patterns/p13-theia-cloud/manifests/gdc/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: theia-cloud
  labels:
    app.kubernetes.io/name: theia-cloud
    app.kubernetes.io/part-of: gdc-blueprints
