GDC-blueprint-artifacts/patterns/p13-theia-cloud/manifests/gdc/theia-cloud-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: theia-cloud-operator
  namespace: theia-cloud
  labels:
    app.kubernetes.io/name: theia-cloud-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: theia-cloud-operator
  template:
    metadata:
      labels:
        app: theia-cloud-operator
    spec:
      serviceAccountName: theia-cloud-operator-sa
      containers:
      - name: operator
        image: us-central1-docker.pkg.dev/test-project/blueprint-images/theia-cloud-operator:latest # kpt-set: ${registry-host}/theia-cloud-operator:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: session
        - containerPort: 8080
          name: health
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: theia-cloud-landing-page
  namespace: theia-cloud
  labels:
    app.kubernetes.io/name: theia-cloud-landing-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: theia-cloud-landing-page
  template:
    metadata:
      labels:
        app: theia-cloud-landing-page
    spec:
      containers:
      - name: landing-page
        image: us-central1-docker.pkg.dev/test-project/blueprint-images/theia-cloud-landing-page:latest # kpt-set: ${registry-host}/theia-cloud-landing-page:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: theia-cloud-landing-page
  namespace: theia-cloud
spec:
  selector:
    app: theia-cloud-landing-page
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: theia-cloud-session-service
  namespace: theia-cloud
spec:
  selector:
    app: theia-cloud-operator
  ports:
  - port: 3000
    targetPort: 3000
